--- a/app/public/home.html
+++ b/app/public/home.html
@@ -8,7 +8,7 @@
     <title>Friend-Finder</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container">
             <div class="jumbotron">
                     <h1 class="display-4">Friend Finder</h1>
                     <hr class="my-4">
