--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -4,11 +4,139 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Friend-Finder-Survey</title>
 </head>
 <body>
-    <h1>Survey</h1>
-    <a href="/">Home</a>
+    <div class="container">
+            <h2>Survey Questions</h2>
+            <hr class="my-4">
+                <h2>About you</h2>
+                <form>
+                        <div class="form-group">
+                          <label for="userName">Name (Required)</label>
+                          <input type="text" class="form-control" id="userName" required >
+                        </div>
+                        <div class="form-group">
+                          <label for="userImage">Link to Photo Image (Required)</label>
+                          <input type="text" class="form-control" id="userImage" required>
+                        </div>
+                      </form>
+                      <hr class="my-4">
+                      <div class="form-group">
+                            <label for="question1"><h3>Question 1</h3></label>
+                            <p>Your mind is always buzzing with unexplored ideas and plans.</p>
+                            <select class="form-group" id="question1">
+                              <option value="1">1(Strongly Disagree)</option>
+                              <option value="2">2</option>
+                              <option value="3">3</option>
+                              <option value="4">4</option>
+                              <option value="5">5(Strongly Disagree)</option>
+                            </select>
+                          </div>
+                      <div class="form-group">
+                            <label for="question2"><h3>Question 2</h3></label>
+                            <p>Generally speaking, you rely more on your experience than your imagination.</p>
+                            <select class="form-group" id="question2">
+                                    <option value="1">1(Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5(Strongly Disagree)</option>
+                            </select>
+                          </div>
+                      <div class="form-group">
+                            <label for="question3"><h3>Question 3</h3></label>
+                            <p>You find it easy to stay relaxed and focused even when there is some pressure.</p>
+                            <select class="form-group" id="question3">
+                                    <option value="1">1(Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5(Strongly Disagree)</option>
+                            </select>
+                          </div>
+                      <div class="form-group">
+                            <label for="question4"><h3>Question 4</h3></label>
+                            <p>You rarely do something just out of sheer curiosity.</p>
+                            <select class="form-group" id="question4">
+                                    <option value="1">1(Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5(Strongly Disagree)</option>
+                            </select>
+                          </div>
+                      <div class="form-group">
+                            <label for="question5"><h3>Question 5</h3></label>
+                            <p>People can rarely upset you.</p>
+                            <select class="form-group" id="question5">
+                                    <option value="1">1(Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5(Strongly Disagree)</option>
+                            </select>
+                          </div>
+                      <div class="form-group">
+                            <label for="question6"><h3>Question 6</h3></label>
+                            <p>It is often difficult for you to relate to other people’s feelings.</p>
+                            <select class="form-group" id="question6">
+                                    <option value="1">1(Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5(Strongly Disagree)</option>
+                            </select>
+                          </div>
+                      <div class="form-group">
+                            <label for="question7"><h3>Question 7</h3></label>
+                            <p>In a discussion, truth should be more important than people’s sensitivities.</p>
+                            <select class="form-group" id="question7">
+                                    <option value="1">1(Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5(Strongly Disagree)</option>
+                            </select>
+                          </div>
+                      <div class="form-group">
+                            <label for="question8"><h3>Question 8</h3></label>
+                            <p>You rarely get carried away by fantasies and ideas.</p>
+                            <select class="form-group" id="question8">
+                                    <option value="1">1(Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5(Strongly Disagree)</option>
+                            </select>
+                          </div>
+                      <div class="form-group">
+                            <label for="question9"><h3>Question 9</h3></label>
+                            <p>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</p>
+                            <select class="form-group" id="question9">
+                                    <option value="1">1(Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5(Strongly Disagree)</option>
+                            </select>
+                          </div>
+                      <div class="form-group">
+                            <label for="question10"><h3>Question 10</h3></label>
+                            <p>You feel more energetic after spending time with a group of people.</p>
+                            <select class="form-group" id="question10">
+                                    <option value="1">1(Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5(Strongly Disagree)</option>
+                            </select>
+                          </div>
+                          <button type="submit" class="btn btn-primary btn-block">Submit</button>
+            <hr class="my-4">
+            <a href="/">Home</a>
+    </div>
 
     <script>
     </script>
